--- a/mysite.conf
+++ b/mysite.conf
@@ -1,4 +1,12 @@
 [bodyend]
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vo1ua0Kfn95wYqS7KAmFMx-WAvw4PVg-bbdJE6MkHP8&cl=ffffff&w=a"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-58MM4NKRP3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-58MM4NKRP3');
+</script>
 </body>
 </html>
